--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
-  <title>Happy Republic Day 🇮🇳</title>
+  <title>TEST PAGE</title>
+</head>
+<body style="background: yellow; text-align: center; padding-top: 100px;">
 
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      text-align: center;
-      font-family: Arial, sans-serif;
-      background: linear-gradient(orange, white, green);
-    }
+  <h1 style="color: black; font-size: 40px;">
+    ✅ SITE IS WORKING
+  </h1>
 
-    h1 {
-      margin-top: 40px;
+  <p style="font-size: 20px;">
+    GitHub Pages is loading index.html correctly.
+  </p>
+
+</body>
+</html>
