Enhance index.html with new styles and title
Updated the title and added styles for body, h1, marquee, chakra, video, and modi elements.

--- a/index.html
+++ b/index.html
@@ -1,18 +1,64 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>TEST PAGE</title>
-</head>
-<body style="background: yellow; text-align: center; padding-top: 100px;">
+  <title>🇮🇳 Happy Republic Day 🇮🇳</title>
 
-  <h1 style="color: black; font-size: 40px;">
-    ✅ SITE IS WORKING
-  </h1>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      text-align: center;
+      font-family: Arial, sans-serif;
+      background: linear-gradient(orange, white, green);
+      overflow-x: hidden;
+    }
 
-  <p style="font-size: 20px;">
-    GitHub Pages is loading index.html correctly.
-  </p>
+    h1 {
+      margin-top: 30px;
+      font-size: 36px;
+    }
 
-</body>
-</html>
+    marquee {
+      background: yellow;
+      font-size: 18px;
+      padding: 10px;
+      margin: 10px 0;
+    }
+
+    /* Chakra */
+    .chakra {
+      width: 120px;
+      height: 120px;
+      border: 6px solid blue;
+      border-radius: 50%;
+      margin: 20px auto;
+      animation: spin 2s linear infinite;
+    }
+
+    @keyframes spin {
+      to { transform: rotate(360deg); }
+    }
+
+    /* Video */
+    video {
+      width: 90%;
+      max-width: 600px;
+      border: 5px solid green;
+      border-radius: 10px;
+      margin-top: 20px;
+    }
+
+    /* Modi */
+    .modi {
+      position: fixed;
+      bottom: 0;
+      left: -150px;
+      width: 140px;
+      animation: modiMove 10s infinite;
+    }
+
+    @keyframes modiMove {
+      0% { left: -150px; }
+      50% { left: 40%; }
+      100% { left: -150px;
