--- a/index.html
+++ b/index.html
@@ -11,22 +11,19 @@
       text-align: center;
       font-family: Arial, sans-serif;
       background: linear-gradient(orange, white, green);
-      overflow-x: hidden;
     }
 
     h1 {
       margin-top: 30px;
-      font-size: 36px;
+      font-size: 34px;
     }
 
     marquee {
       background: yellow;
-      font-size: 18px;
       padding: 10px;
-      margin: 10px 0;
+      font-size: 18px;
     }
 
-    /* Chakra */
     .chakra {
       width: 120px;
       height: 120px;
@@ -40,7 +37,6 @@
       to { transform: rotate(360deg); }
     }
 
-    /* Video */
     video {
       width: 90%;
       max-width: 600px;
@@ -49,16 +45,53 @@
       margin-top: 20px;
     }
 
-    /* Modi */
-    .modi {
-      position: fixed;
-      bottom: 0;
-      left: -150px;
-      width: 140px;
-      animation: modiMove 10s infinite;
+    button {
+      margin: 20px;
+      padding: 10px 20px;
+      font-size: 16px;
+      background: green;
+      color: white;
+      border: none;
+      border-radius: 5px;
     }
 
-    @keyframes modiMove {
-      0% { left: -150px; }
-      50% { left: 40%; }
-      100% { left: -150px;
+    footer {
+      margin-top: 30px;
+      padding: 15px;
+      background: black;
+      color: white;
+      font-size: 14px;
+    }
+  </style>
+</head>
+
+<body>
+
+  <h1>🇮🇳 HAPPY REPUBLIC DAY 🇮🇳</h1>
+
+  <marquee>🇮🇳 MERA BHARAT MAHAN 🇮🇳 JAI HIND 🇮🇳 VANDE MATARAM 🇮🇳</marquee>
+
+  <div class="chakra"></div>
+
+  <!-- VIDEO -->
+  <video controls>
+    <source src="video.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+
+  <!-- MUSIC -->
+  <audio id="music" loop>
+    <source src="song.mp3" type="audio/mpeg">
+  </audio>
+
+  <br>
+  <button onclick="document.getElementById('music').play()">
+    ▶️ Play Patriotic Music
+  </button>
+
+  <footer>
+    Made with 🇮🇳 by Sharvil
+  </footer>
+
+</body>
+</html>
